Add endpoint to find VM
